# viman

./: .gitignore  On-SLAM_algos.md  README.md  README_BACKUP_27438.md
Visual_odometry_for_viman/: README.MD
Visual_odometry_for_viman/codes/: opticalflow_test_1.py  orbdet_test_1.py  position_test_2.py  position_test_3.py
viman_control/: CMakeLists.txt  package.xml
viman_control/cam_info/: z_linear_thresholds.txt
viman_control/include/: plugin_altimeter.h  plugin_viman_flight.h  viman.h  viman_ctrl.h  viman_key_ctrl.h  viman_sa.h  vm_pid.h  vm_pid_linear.h  vm_pid_rotate.h  vm_z_linear_nav.h
viman_control/include/plugin/: pid_controller.h  plugin_viman_flight.h
viman_control/include/utility/: Map.h  cardan.h  imumath.h  imumath_brief.h  quaternion.h
viman_control/maps/: senseMap.g2o  test.g2o  zMap.g2o  zMap1.g2o  zMap1.g2o_opt  zMapLin.g2o  zMap_test.g2o
viman_control/scripts/: calibration_data.txt  dwn_vision.py  frnt_vision.py  vision_process.py
viman_control/scripts/slam_XY/: motion_detection.py
viman_control/scripts/slam_Z/: CMakeLists.txt  process_vision.py  z_vision.py
viman_control/src/: pid_controller.cpp  plugin_altimeter.cpp  plugin_ros_cam.cpp  plugin_viman_ctrl.cpp  plugin_viman_flight.cpp  viman.cpp  viman_key_ctrl.cpp  viman_sa.cpp  vm_pid.cpp  vm_pid_linear.cpp  vm_pid_rotate.cpp  vm_z_linear_nav.cpp
viman_control/src/plugin/: plugin_altimeter.cpp  plugin_viman_flight.cpp
viman_control/src/slam_Z/: CMakeLists.txt  vm_z.cpp  vm_z.h  vm_z_linear_nav.cpp  vm_z_linear_nav.h
viman_control/src/test/: CMakeLists.txt  map_storage_test.cpp
viman_control/src/utility/: CMakeLists.txt  Map.cpp  cardan.cpp  quaternion.cpp  visualize_map.cpp  vm_sensor_data.cpp
viman_utility/: CMakeLists.txt  package.xml
viman_utility/msg/: CamZ.msg
viman_visualize/: CMakeLists.txt  package.xml
viman_visualize/config/: flight_mode.rviz  urdf.rviz
viman_visualize/launch/: display-gazebo.launch  display-rviz.launch  gazebo-disp.launch  rviz-disp.launch
viman_visualize/meshes/: base_link.STL  base_link_collision.STL  cy_linear.STL  cy_stack_part.STL  propeller.STL  vmpad_base.STL
viman_visualize/models/env2_terrain/: model.config  model.sdf
viman_visualize/models/env2_terrain/materials/scripts/: env2_terrain.material
viman_visualize/models/terrain/: model.sdf
viman_visualize/models/terrain/materials/scripts/: terrain.material
viman_visualize/urdf/: cy_lin_rot.xacro  cy_linear.xacro  task1_gate.xacro  viman.xacro  vmpad.xacro
viman_visualize/worlds/: env2.world  open_sky.world
