<package format="2">
  <name>viman_control</name>
  <version>0.1.1</version>

  <description>This package contains the control plugins and nodes required to simulate UAV-Viman.</description>
  <author email="mehta.mayank860@gmail.com">Mayank N. Mehta</author>

  <maintainer email="mehta.mayank860@gmail.com">Mayank N. Mehta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>viman_utility </build_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>viman_utility </exec_depend>

  <export>
	<gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
  
</package>
